# telegramSillyApp

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
tlprog/: __main__.py  cli.py  letme.py  main.py  progress.py  settings.py
